--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
             <div id="divMo"><span id="modal">Book a Table</span></div>
         </div>
     </header>
+    <section id="s1">
+        <div id="dTot1">
+            <div id="sDiv1">
+                <div><h1>ENJOY YOUR HEALTHY <br> DELICIOUS FOOD</h1><p> Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Ipsa nisi  dignissimos </p> </div> <br>
+                <div><button id="bts1">Book a Table</button> <button id="bts2"><i class="fa-regular fa-circle-play"></i><span id="spnoir"> Watch video</span></button></div>
+            </div>
+            <div id="im1">
+                <img src="./public/img/menu-item-1.png" alt="" height="490px">
+            </div>
+        </div>
+    </section>
+    <section id="s2">
+        <div id="ds2">
+            <p>About us</p>
+            <h3>Learn more <span id="spab">about us</span> </h3>
+        </div>
+    </section>
 
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
