Sextion 2 finie html css

--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/css/app.css"></link>
+    <link rel="stylesheet" href="./public/css/app.css">
+    </link>
     <title>cs_miam_js_Yassine</title>
 </head>
+
 <body>
     <header>
         <div id="secDiv">
-            <div><h1>Miam<span id="pointV">.</span></h1></div>
-            <div id="divT"><p href="">Home</p> <p href="">About</p> <p href="">Menu</p>
-            <p href="">Events</p><p href="">Chefs</p><p href="">Gallery</p><p href="">Contact</p></div>
+            <div>
+                <h1>Miam<span id="pointV">.</span></h1>
+            </div>
+            <div id="divT">
+                <p href="">Home</p>
+                <p href="">About</p>
+                <p href="">Menu</p>
+                <p href="">Events</p>
+                <p href="">Chefs</p>
+                <p href="">Gallery</p>
+                <p href="">Contact</p>
+            </div>
             <div id="divMo"><span id="modal">Book a Table</span></div>
         </div>
     </header>
     <section id="s1">
         <div id="dTot1">
             <div id="sDiv1">
-                <div><h1>ENJOY YOUR HEALTHY <br> DELICIOUS FOOD</h1><p> Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Ipsa nisi  dignissimos </p> </div> <br>
-                <div><button id="bts1">Book a Table</button> <button id="bts2"><i class="fa-regular fa-circle-play"></i><span id="spnoir"> Watch video</span></button></div>
+                <div>
+                    <h1>ENJOY YOUR HEALTHY <br> DELICIOUS FOOD</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Ipsa nisi dignissimos </p>
+                </div> <br>
+                <div><button id="bts1">Book a Table</button> <button id="bts2"><i
+                            class="fa-regular fa-circle-play"></i><span id="spnoir"> Watch video</span></button></div>
             </div>
             <div id="im1">
                 <img src="./public/img/menu-item-1.png" alt="" height="490px">
@@ -33,8 +49,27 @@
             <h3>Learn more <span id="spab">about us</span> </h3>
         </div>
     </section>
+    <section id="sous2">
+        <div id="divImg">
+            <div id="divBlanche">
+                <h3>Book a table</h3>
+                <strong>+1 5589 55488 55 </strong>
+            </div>
+        </div>
+        <div id="divTexte">
+            <p class="ps2">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Ullam, et. Lorem ipsum dolor sit amet </p>
+            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><span id="spara"> contr ipsum dolor sit amet consectetur adipisicing. test </span></p>
+            <p class="ps2">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Vero facere totam ab est ducimus alias, temporibus autem <br> a eveniet odit. ipsum lorem elit lorem ipsum elit lorem <br> Lorem ipsum dolor sit.</p>
+            <div id="dim2">
+                <i class="fa-solid fa-play"></i>
+            </div>
+        </div>
+    </section>
 
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
