Section 3 et 4 faites en html css

--- a/index.html
+++ b/index.html
@@ -57,19 +57,67 @@
             </div>
         </div>
         <div id="divTexte">
-            <p class="ps2">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Ullam, et. Lorem ipsum dolor sit amet </p>
-            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><span id="spara"> contr ipsum dolor sit amet consectetur adipisicing. test </span></p>
-            <p class="ps2">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Vero facere totam ab est ducimus alias, temporibus autem <br> a eveniet odit. ipsum lorem elit lorem ipsum elit lorem <br> Lorem ipsum dolor sit.</p>
+            <p class="ps2">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Ullam, et. Lorem ipsum dolor
+                sit amet </p>
+            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing
+                elit.</p>
+            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing
+                elit.</p>
+            <p class="ps2"><i class="fa-solid fa-check-double"></i>Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. <br><span id="spara"> contr ipsum dolor sit amet consectetur adipisicing. test </span></p>
+            <p class="ps2">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Vero facere totam ab est
+                ducimus alias, temporibus autem <br> a eveniet odit. ipsum lorem elit lorem ipsum elit lorem <br> Lorem
+                ipsum dolor sit.</p>
             <div id="dim2">
                 <i class="fa-solid fa-play"></i>
             </div>
         </div>
     </section>
-
-
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <section id="s3">
+        <div id="d1s3">
+            <h1>Why choose Miam?</h1>
+            <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Quam, est. Lorem ipsum dolor <br> sit
+                amet consectetur <br> adipisicing elit. Dignissimos, ab.</p>
+            <button>Learn more</button>
+        </div>
+        <div class="d2s3">
+            <i class="fa-solid fa-signal"></i>
+            <h4>Corporis Voluptates <br> officia eiusmod</h4>
+            <p>Lorem ipsum dolor sit amet. <br> ipsum lorem lorem sit <br> Lorem ipsum dolor sit lorem.</p>
+        </div>
+        <div class="d2s3">
+            <i class="fa-regular fa-gem"></i>
+            <h4>Ullamco laboris <br> ladore pan</h4>
+            <p>Lorem ipsum dolor sit amet. <br> ipsum lorem lorem sit <br> Lorem ipsum dolor sit lorem.</p>
+        </div>
+        <div class="d2s3">
+            <i class="fa-solid fa-box-archive"></i>
+            <h4>Labore consequatur <br> incidir dolore</h4>
+            <p>Lorem ipsum dolor sit amet. <br> ipsum lorem lorem sit <br> Lorem ipsum dolor sit lorem.</p>
+        </div>
+    </section>
+    <section id="s4">
+        <div id="filter">
+            <div class="dsousf">
+                <h1>232 </h1>
+                <p>client</p>
+            </div>
+            <div class="dsousf">
+                <h1>521 </h1>
+                <p>Projects</p>
+            </div>
+            <div class="dsousf">
+                <h1>1453 </h1>
+                <p>Hours Of Supports</p>
+            </div>
+            <div class="dsousf">
+                <h1>32 </h1>
+                <p>Workers</p>
+            </div>
+        </div>
+    </section>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js">
+    </script>
 </body>
 
 </html>
