full js presque fini

--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
                 <p>Workers</p>
             </div>
         </div>
-    </section>
+ </section> 
+ <section id="s55">
+
+ </section>
+    
+    <script src="./public/js/main.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js">
     </script>
 </body>
