--- a/index.html
+++ b/index.html
@@ -115,14 +115,73 @@
                 <p>Workers</p>
             </div>
         </div>
- </section> 
- <section id="s55">
+    </section>
+    <section id="s555">
 
- </section>
-    
+    </section>
+    <section id="s6">
+        <div id="tout1">
+            <p class="pmoni">TESTMONIALS</p>
+            <p class="pmoni"><span>WHAT ARE THEY</span> <strong> SAYING ABOUT US </strong></p>
+            <div id="tout2">
+                <div class="dcom">
+                    <div class="sousdcom">
+                        <p class="borderGauche"><i class="rouge fa-solid fa-quote-left" id="rouge"></i></span> Lorem ipsum dolor, sit amet consectetur
+                            adipisicing elit. <br> Debitis, animi! Lorem ipsum dolor sit, amet consectetur <br>
+                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge" id="rouge"></i></span>
+                            <br> <br>
+                            <strong>Jena Karlis</strong> <br>
+                            <span>Store owner</span> <br>
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </p>
+                        <img src="./public/img/testimonials-1.jpg" alt="" height="120px" class="tmoni">
+                    </div>
+                    <div class="sousdcom">
+                        <p class="borderGauche"><i class="fa-solid fa-quote-left rouge" id="rouge"></i></span> Lorem ipsum dolor, sit amet consectetur
+                            adipisicing elit. <br> Debitis, animi! Lorem ipsum dolor sit, amet consectetur <br>
+                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge" id="rouge"></i></span>
+                            <br> <br>
+                            <strong>Jena Karlis</strong> <br>
+                            <span>Store owner</span> <br>
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </p>
+                        <img src="./public/img/testimonials-2.jpg" alt="" height="120px" class="tmoni">
+                    </div>
+                    <div class="sousdcom">
+                        <p class="borderGauche"><i class="fa-solid fa-quote-left rouge" id="rouge"></i></span> Lorem ipsum dolor, sit amet consectetur
+                            adipisicing elit. <br> Debitis, animi! Lorem ipsum dolor sit, amet consectetur <br>
+                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge" id="rouge"></i></span>
+                            <br> <br>
+                            <strong>Jena Karlis</strong> <br>
+                            <span>Store owner</span> <br>
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i>
+                        </p>
+                        <img src="./public/img/testimonials-3.jpg" alt="" height="120px" class="tmoni">
+                    </div>
+                </div>
+
+
+            </div>
+            <div id="divbtcar1">
+                <button id="btcar1"></button>
+                <button id="btcar2"></button>
+                <button id="btcar3"></button>
+            </div>
+
+        </div>
+
+    </section>
+
     <script src="./public/js/main.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js">
     </script>
+    <script src="path-to-the-file/splide.min.js"></script>
 </body>
 
 </html>
