Caroussel 2 presque fini

--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
             <div id="tout2">
                 <div class="dcom">
                     <div class="sousdcom">
-                        <p class="borderGauche"><i class="rouge fa-solid fa-quote-left" id="rouge"></i></span> Lorem ipsum dolor, sit amet consectetur
+                        <p class="borderGauche"><i class="rouge fa-solid fa-quote-left" id="rouge"></i></span> Lorem
+                            ipsum dolor, sit amet consectetur
                             adipisicing elit. <br> Debitis, animi! Lorem ipsum dolor sit, amet consectetur <br>
-                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge" id="rouge"></i></span>
+                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge"
+                                id="rouge"></i></span>
                             <br> <br>
                             <strong>Jena Karlis</strong> <br>
                             <span>Store owner</span> <br>
@@ -139,9 +141,11 @@
                         <img src="./public/img/testimonials-1.jpg" alt="" height="120px" class="tmoni">
                     </div>
                     <div class="sousdcom">
-                        <p class="borderGauche"><i class="fa-solid fa-quote-left rouge" id="rouge"></i></span> Lorem ipsum dolor, sit amet consectetur
+                        <p class="borderGauche"><i class="fa-solid fa-quote-left rouge" id="rouge"></i></span> Lorem
+                            ipsum dolor, sit amet consectetur
                             adipisicing elit. <br> Debitis, animi! Lorem ipsum dolor sit, amet consectetur <br>
-                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge" id="rouge"></i></span>
+                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge"
+                                id="rouge"></i></span>
                             <br> <br>
                             <strong>Jena Karlis</strong> <br>
                             <span>Store owner</span> <br>
@@ -152,9 +156,11 @@
                         <img src="./public/img/testimonials-2.jpg" alt="" height="120px" class="tmoni">
                     </div>
                     <div class="sousdcom">
-                        <p class="borderGauche"><i class="fa-solid fa-quote-left rouge" id="rouge"></i></span> Lorem ipsum dolor, sit amet consectetur
+                        <p class="borderGauche"><i class="fa-solid fa-quote-left rouge" id="rouge"></i></span> Lorem
+                            ipsum dolor, sit amet consectetur
                             adipisicing elit. <br> Debitis, animi! Lorem ipsum dolor sit, amet consectetur <br>
-                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge" id="rouge"></i></span>
+                            adipisicing elit. Vel, voluptate? <i class="fa-solid fa-quote-right rouge"
+                                id="rouge"></i></span>
                             <br> <br>
                             <strong>Jena Karlis</strong> <br>
                             <span>Store owner</span> <br>
@@ -176,6 +182,30 @@
 
         </div>
 
+    </section>
+    <section id="s7">
+        <div id="d1s7">
+            <p>EVENTS</p>
+            <h2 id="h2s7">SHARE <span id="spBleu">YOUR MOMENTS</span> IN OUR RESTAURANT</h2>
+        </div>
+        <div>
+            <div id="tout22">
+                <div class="dcom2">
+                    <div class="sousdcom2">
+                        <div id="divcar1">1</div>
+                        <div>2</div>
+                        <div>3</div>
+                        <div>4</div>
+                        <div>5</div>
+                    </div>
+                </div>
+            </div>
+            <div id="divbtcar1">
+                <button id="btcar11"></button>
+                <button id="btcar22"></button>
+                <button id="btcar33"></button>
+            </div>
+        </div>
     </section>
 
     <script src="./public/js/main.js"></script>
