--- a/index.html
+++ b/index.html
@@ -192,20 +192,53 @@
             <div id="tout22">
                 <div class="dcom2">
                     <div class="sousdcom2">
-                        <div id="divcar1">1</div>
-                        <div>2</div>
-                        <div>3</div>
-                        <div>4</div>
-                        <div>5</div>
+                        <div id="divcar1">
+                            <div id="sousdivcar1">
+                                <h3>Privates Parties</h3> 
+                                <h3 id="lBleue">$499</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                            </div>
+                        </div>
+                        <div id="divcar2">
+                            <div id="sousdivcar2">
+                                <h3>Birthday Parties</h3> 
+                                <h3 id="lBleue">$499</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                            </div>
+                        </div>
+                        <div id="divcar3">
+                            <div id="sousdivcar3">
+                                <h3>Birthday Parties</h3> 
+                                <h3 id="lBleue">$499</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                            </div>
+                        </div>
+                        <div id="divcar1">
+                            <div id="sousdivcar1">
+                                <h3>Birthday Parties</h3> 
+                                <h3 id="lBleue">$499</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit,</p>
+                            </div>
+                        </div>
+                        <div id="divcar2">
+                            <div id="sousdivcar2">
+                                <h3>Birthday Parties</h3> 
+                                <h3 id="lBleue">$499</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="divbtcar1">
+            <div id="divbtcar11">
                 <button id="btcar11"></button>
                 <button id="btcar22"></button>
                 <button id="btcar33"></button>
             </div>
         </div>
+    </section>
+    <section id="s8">
+
     </section>
 
     <script src="./public/js/main.js"></script>
