section card finie

--- a/index.html
+++ b/index.html
@@ -194,37 +194,42 @@
                     <div class="sousdcom2">
                         <div id="divcar1">
                             <div id="sousdivcar1">
-                                <h3>Privates Parties</h3> 
+                                <h3>Privates Parties</h3>
                                 <h3 id="lBleue">$499</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem
+                                    ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
                             </div>
                         </div>
                         <div id="divcar2">
                             <div id="sousdivcar2">
-                                <h3>Birthday Parties</h3> 
+                                <h3>Birthday Parties</h3>
                                 <h3 id="lBleue">$499</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem
+                                    ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
                             </div>
                         </div>
                         <div id="divcar3">
                             <div id="sousdivcar3">
-                                <h3>Birthday Parties</h3> 
+                                <h3>Birthday Parties</h3>
                                 <h3 id="lBleue">$499</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem
+                                    ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
                             </div>
                         </div>
                         <div id="divcar1">
                             <div id="sousdivcar1">
-                                <h3>Birthday Parties</h3> 
+                                <h3>Birthday Parties</h3>
                                 <h3 id="lBleue">$499</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit,</p>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem
+                                    ipsum <br> dolor sit amet consectetur adipisicing elit. Odit,</p>
                             </div>
                         </div>
                         <div id="divcar2">
                             <div id="sousdivcar2">
-                                <h3>Birthday Parties</h3> 
+                                <h3>Birthday Parties</h3>
                                 <h3 id="lBleue">$499</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
+                                <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Id, cumque! Lorem
+                                    ipsum <br> dolor sit amet consectetur adipisicing elit. Odit, </p>
                             </div>
                         </div>
                     </div>
@@ -238,7 +243,70 @@
         </div>
     </section>
     <section id="s8">
+        <div id="d1s8">
+            <p id="p1s8">CHEFS</p>
+            <h2 id="h2s8">OUR <span id="sps8">PROFESSIONAL </span> CHEFS</h2>
+        </div>
+        <div id="d2s8">
+            <div id="sousd2s8_1">
+                <div class="logoanim">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+                <div class="dvag">
+                    <div class="dvag2">
+                        <img src="./public/img/wave2.svg" alt="" class="wave">
+                    </div>
+                    <div class="txtwave">
+                        <h4>Walter White</h4>
+                        <p id="p1s8">CHEFS</p>
+                        <p class="p2s8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, nostrum.
+                            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="sousd2s8_2">
+                <div class="logoanim">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+                <div class="dvag">
+                    <div class="dvag2">
 
+                        <img src="./public/img/wave2.svg" alt="" class="wave">
+                    </div>
+                    <div class="txtwave">
+                        <h4>Walter White</h4>
+                        <p id="p1s8">CHEFS</p>
+                        <p class="p2s8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, nostrum.
+                            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="sousd2s8_3">
+                <div class="logoanim">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+                <div class="dvag">
+                    <div class="dvag2">
+                        <img src="./public/img/wave2.svg" alt="" class="wave">
+                    </div>
+                    <div class="txtwave">
+                        <h4>Walter White</h4>
+                        <p id="p1s8">CHEFS</p>
+                        <p class="p2s8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, nostrum.
+                            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="./public/js/main.js"></script>
