section 9 (inscription) finie

--- a/index.html
+++ b/index.html
@@ -308,7 +308,32 @@
             </div>
         </div>
     </section>
+    <section id="s9">
+        <div id="d1s9">
+            <p id="p1s9">Book a table</p>
+            <h2 id="h2s9">BOOK <span id="sps9">YOUR STAY</span> WITH US</h2>
+        </div>
+        <div id="d2s9">
+            <div id="d2s9_1">
 
+            </div>
+            <div id="d2s9_2">
+                <div id="sousd2s9">
+                    <input type="text" value="Your Name"><input type="text" value="Your Email"><input type="text" value="Your Phone">
+                </div>
+                <div id="sousd2s9_2">
+                    <input type="text" value="Date"><input type="text" value="Time"><input type="text" value="# of people">
+                </div>
+                <div id="sousd2s9_3">
+                    <textarea name="" id="" cols="30" rows="10">Message</textarea>
+                </div>
+                <div id="d3s9bt">
+                    <button id="bts9">Book a table</button>
+                </div>
+            </div>
+            
+        </div>
+    </section>
     <script src="./public/js/main.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js">
     </script>
