--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@
         </div>
         
     </section>
+    <footer>
+        
+    </footer>
     <script src="./public/js/main.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js">
     </script>
