anim header finie

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <h1>Miam<span id="pointV">.</span></h1>
             </div>
             <div id="divT">
-                <p href="">Home</p>
-                <p href="">About</p>
-                <p href="">Menu</p>
-                <p href="">Events</p>
-                <p href="">Chefs</p>
-                <p href="">Gallery</p>
-                <p href="">Contact</p>
+                <p class="hvr-underline-from-left">Home</p>
+                <p class="hvr-underline-from-left">About</p>
+                <p class="hvr-underline-from-left">Menu</p>
+                <p class="hvr-underline-from-left">Events</p>
+                <p class="hvr-underline-from-left">Chefs</p>
+                <p class="hvr-underline-from-left">Gallery</p>
+                <p class="hvr-underline-from-left">Contact</p>
             </div>
             <div id="divMo"><span id="modal">Book a Table</span></div>
         </div>
@@ -473,7 +473,7 @@
                 <i class="fa-solid fa-share-nodes"></i>
                 <div id="dds11">
                     <h4>Opening hours</h4>
-                    <p><strong> Mon-Sat:</strong> 11AM - 23PM; <strong>Sunday:</strong>  Closed</p>
+                    <p><strong> Mon-Sat:</strong> 11AM - 23PM; <strong>Sunday:</strong> Closed</p>
                 </div>
             </div>
         </div>
@@ -493,10 +493,44 @@
                 <button id="bts11">Send Message</button>
             </div>
         </div>
-        
+
     </section>
     <footer>
-        
+        <div id="divf">
+            <div id="sousdivF">
+                <p> <i class="fa-solid fa-location-dot"></i><strong> Adress</strong> </p>
+                <p>A108 Adam Street</p>
+                <p>New york,NY 553022 - US</p>
+            </div>
+            <div id="sousdivF">
+                <p> <i class="fa-solid fa-phone"></i><strong> Reservations</strong> </p>
+                <p>Phone Street</p>
+                <p>New york,NY 553022 - US</p>
+            </div>
+            <div id="sousdivF">
+                <p><i class="fa-regular fa-clock"></i><strong> Opening Hours</strong> </p>
+                <p>A108 Adam Street</p>
+                <p>FOLLOW US</p>
+            </div>
+            <div id="sousdivF">
+                <p><strong>Follow us</strong> </p>
+                <p>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </p>
+            </div>
+        </div>
+        <div id="dligne">
+            <span id="ligne">
+
+            </span>
+        </div>
+        <div id="derniere">
+            <p><i class="fa-regular fa-copyright"></i> Copyright <strong>Miam.</strong> All Rights Reserved
+            </p>
+        </div>
     </footer>
     <script src="./public/js/main.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js">
