Theme dark fait

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <header>
         <div id="secDiv">
+            <button id="dark">Thème sombre</button>
+
             <div>
                 <h1>Miam<span id="pointV">.</span></h1>
             </div>
@@ -25,7 +27,9 @@
                 <p class="hvr-underline-from-left">Gallery</p>
                 <p class="hvr-underline-from-left">Contact</p>
             </div>
-            <div id="divMo"><span id="modal">Book a Table</span></div>
+            <div id="divMo">
+                <span id="modal">Book a Table</span>
+            </div>
         </div>
     </header>
     <section id="s1">
