Mobile m responsive finit

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <p class="hvr-underline-from-left">Gallery</p>
                 <p class="hvr-underline-from-left">Contact</p>
             </div>
+            
             <div id="divMo">
                 <span id="btnOpenModal">Book a Table</span>
                 <div id="modal" class="modal">
@@ -39,7 +40,7 @@
                                 <label for="password">Mot de passe:</label>
                                 <input type="password" id="password" name="password">
                                 <input type="submit" value="Connexion" id="conn">
-                                <input type="submit" value="Mot de passe oublié" id="mdpOub">
+                                <input type="submit" value="Mdp oublié" id="mdpOub">
                             </div>
                         </form>
                     </div>
