--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--Navbar-->
     <header>
         <div id="secDiv">
             <button id="dark">Thème sombre</button>
