--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="hvr-underline-from-left">Gallery</p>
                 <p class="hvr-underline-from-left">Contact</p>
             </div>
-            
+            <!--Modal-->
             <div id="divMo">
                 <span id="btnOpenModal">Book a Table</span>
                 <div id="modal" class="modal">
