--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </div>
         </div>
     </header>
+    <!-- Image principal -->
     <section id="s1">
         <div id="dTot1">
             <div id="sDiv1">
