--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             </div>
         </div>
     </section>
+    <!--Section 3-->
     <section id="s3">
         <div id="d1s3">
             <h1>Why choose Miam?</h1>
