--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <!--Section 3-->
     <section id="s3">
         <div id="d1s3">
+            <!-- 4 cards animées -->
             <h1>Why choose Miam?</h1>
             <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Quam, est. Lorem ipsum dolor <br> sit
                 amet consectetur <br> adipisicing elit. Dignissimos, ab.</p>
