--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <p>Lorem ipsum dolor sit amet. <br> ipsum lorem lorem sit <br> Lorem ipsum dolor sit lorem.</p>
         </div>
     </section>
+    <!--Section 4-->
     <section id="s4">
         <div id="filter">
             <div class="dsousf">
