--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <!--Section 5 -->
     <section id="s555">
     </section>
+    <!--Section 6-->
     <section id="s6">
         <div id="tout1">
             <p class="pmoni">TESTMONIALS</p>
@@ -198,8 +199,6 @@
                         <img src="./public/img/testimonials-3.jpg" alt="" height="120px" class="tmoni">
                     </div>
                 </div>
-
-
             </div>
             <div id="divbtcar1">
                 <button id="btcar1"></button>
