--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
             </div>
         </div>
     </section>
+    <!--Section 7 -->
     <section id="s7">
         <div id="d1s7">
             <p>EVENTS</p>
