--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
             </div>
         </div>
     </section>
+    <!--Section 8 -->
     <section id="s8">
         <div id="d1s8">
             <p id="p1s8">CHEFS</p>
