--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
             </div>
         </div>
     </section>
+    <!--Section 9-->
     <section id="s9">
         <div id="d1s9">
             <p id="p1s9">Book a table</p>
