--- a/index.html
+++ b/index.html
@@ -342,7 +342,6 @@
         </div>
         <div id="d2s9">
             <div id="d2s9_1">
-
             </div>
             <div id="d2s9_2">
                 <div id="sousd2s9">
@@ -362,16 +361,7 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
+    <!--Section 10 -->
     <section id="s10">
         <div id="d1s10">
             <p id="p2s10">GALLERY</p>
